// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add disabled button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-195 MuiButtonBase-disabled-196 MuiButton-root-173 MuiButton-flat-177 MuiButton-disabled-189 sc-bdVaJa bZwfYr"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-174"
  >
    <span>
      default disabled
    </span>
  </span>
</button>
`;

exports[`add icon button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-195 MuiButton-root-173 MuiButton-flat-177 sc-bdVaJa eCHEZx"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-174"
  >
    <span
      class="sc-bwzfXH czactv"
    >
      <svg
        aria-hidden="true"
        data-prefix="fas"
        data-icon="coffee"
        class="svg-inline--fa fa-coffee fa-w-20 "
        role="img"
        xmlns="http://www.w3.org/2000/svg"
        viewBox="0 0 640 512"
      >
        <path
          fill="currentColor"
          d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
        />
      </svg>
    </span>
    <span>
      default with icon
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-214"
  />
</button>
`;

exports[`add loading button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-195 MuiButtonBase-disabled-196 MuiButton-root-173 MuiButton-flat-177 MuiButton-disabled-189 sc-bdVaJa kDykdf"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-174"
  >
    <div
      class="MuiCircularProgress-root-205 MuiCircularProgress-colorPrimary-208 MuiCircularProgress-indeterminate-207"
      style="margin-right: 10px; color: rgba(0, 181, 226, 0.6);"
      role="progressbar"
    >
      <svg
        class="MuiCircularProgress-svg-210"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle-211 MuiCircularProgress-circleIndeterminate-213"
          cx="44"
          cy="44"
          r="20.2"
          fill="none"
          stroke-width="3.6"
        />
      </svg>
    </div>
    <span>
      loading
    </span>
  </span>
</button>
`;

exports[`default button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-23 MuiButton-root-1 MuiButton-flat-5 sc-bdVaJa kSjfNl"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      default
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-26"
  />
</button>
`;

exports[`default disabled button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-23 MuiButtonBase-disabled-24 MuiButton-root-1 MuiButton-flat-5 MuiButton-disabled-17 sc-bdVaJa exXHlC"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      default disabled
    </span>
  </span>
</button>
`;

exports[`default error button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-23 MuiButtonBase-disabled-24 MuiButton-root-1 MuiButton-flat-5 MuiButton-disabled-17 sc-bdVaJa iXgAYs"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      error
    </span>
  </span>
</button>
`;

exports[`default error color button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-23 MuiButton-root-1 MuiButton-flat-5 sc-bdVaJa iXgAYs"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      error color
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-42"
  />
</button>
`;

exports[`default icon button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-23 MuiButton-root-1 MuiButton-flat-5 sc-bdVaJa kSjfNl"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-2"
  >
    <span
      class="sc-bwzfXH czactv"
    >
      <svg
        aria-hidden="true"
        data-prefix="fas"
        data-icon="coffee"
        class="svg-inline--fa fa-coffee fa-w-20 "
        role="img"
        xmlns="http://www.w3.org/2000/svg"
        viewBox="0 0 640 512"
      >
        <path
          fill="currentColor"
          d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
        />
      </svg>
    </span>
    <span>
      default with icon
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-56"
  />
</button>
`;

exports[`default loading button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-23 MuiButtonBase-disabled-24 MuiButton-root-1 MuiButton-flat-5 MuiButton-disabled-17 sc-bdVaJa qigpO"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-2"
  >
    <div
      class="MuiCircularProgress-root-33 MuiCircularProgress-colorPrimary-36 MuiCircularProgress-indeterminate-35"
      style="margin-right: 10px; color: rgba(191, 191, 191, 0.7);"
      role="progressbar"
    >
      <svg
        class="MuiCircularProgress-svg-38"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle-39 MuiCircularProgress-circleIndeterminate-41"
          cx="44"
          cy="44"
          r="20.2"
          fill="none"
          stroke-width="3.6"
        />
      </svg>
    </div>
    <span>
      loading
    </span>
  </span>
</button>
`;

exports[`default secondary button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-23 MuiButton-root-1 MuiButton-flat-5 sc-bdVaJa egkQfu"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      secondary
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-26"
  />
</button>
`;

exports[`default success button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-23 MuiButtonBase-disabled-24 MuiButton-root-1 MuiButton-flat-5 MuiButton-disabled-17 sc-bdVaJa eHKrMa"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      success
    </span>
  </span>
</button>
`;

exports[`default success color button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-23 MuiButton-root-1 MuiButton-flat-5 sc-bdVaJa eHKrMa"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      success color
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-49"
  />
</button>
`;

exports[`default warning button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-23 MuiButton-root-1 MuiButton-flat-5 sc-bdVaJa kMvEVH"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-2"
  >
    <span />
  </span>
  <span
    class="MuiTouchRipple-root-26"
  />
</button>
`;

exports[`link default 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-147 MuiButton-root-125 MuiButton-flat-129 sc-bdVaJa fXrZBP"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-126"
  >
    <span>
      link
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-150"
  />
</button>
`;

exports[`link disabled button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-147 MuiButtonBase-disabled-148 MuiButton-root-125 MuiButton-flat-129 MuiButton-disabled-141 sc-bdVaJa hdJDGm"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-126"
  >
    <span>
      default disabled
    </span>
  </span>
</button>
`;

exports[`link icon button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-147 MuiButton-root-125 MuiButton-flat-129 sc-bdVaJa fXrZBP"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-126"
  >
    <span
      class="sc-bwzfXH czactv"
    >
      <svg
        aria-hidden="true"
        data-prefix="fas"
        data-icon="coffee"
        class="svg-inline--fa fa-coffee fa-w-20 "
        role="img"
        xmlns="http://www.w3.org/2000/svg"
        viewBox="0 0 640 512"
      >
        <path
          fill="currentColor"
          d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
        />
      </svg>
    </span>
    <span>
      default with icon
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-166"
  />
</button>
`;

exports[`link loading button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-147 MuiButtonBase-disabled-148 MuiButton-root-125 MuiButton-flat-129 MuiButton-disabled-141 sc-bdVaJa enWEgF"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-126"
  >
    <div
      class="MuiCircularProgress-root-157 MuiCircularProgress-colorPrimary-160 MuiCircularProgress-indeterminate-159"
      style="margin-right: 10px; color: rgba(191, 191, 191, 0.7);"
      role="progressbar"
    >
      <svg
        class="MuiCircularProgress-svg-162"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle-163 MuiCircularProgress-circleIndeterminate-165"
          cx="44"
          cy="44"
          r="20.2"
          fill="none"
          stroke-width="3.6"
        />
      </svg>
    </div>
    <span>
      loading
    </span>
  </span>
</button>
`;

exports[`outline default 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-85 MuiButton-root-63 MuiButton-flat-67 sc-bdVaJa cIhZGa"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-64"
  >
    <span>
      outline
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-88"
  />
</button>
`;

exports[`outline disabled button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-85 MuiButtonBase-disabled-86 MuiButton-root-63 MuiButton-flat-67 MuiButton-disabled-79 sc-bdVaJa cIhZGa"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-64"
  >
    <span>
      default disabled
    </span>
  </span>
</button>
`;

exports[`outline error button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-85 MuiButtonBase-disabled-86 MuiButton-root-63 MuiButton-flat-67 MuiButton-disabled-79 sc-bdVaJa cIhZGa"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-64"
  >
    <span>
      error
    </span>
  </span>
</button>
`;

exports[`outline error color button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-85 MuiButton-root-63 MuiButton-flat-67 sc-bdVaJa kFhLbt"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-64"
  >
    <span>
      error color
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-104"
  />
</button>
`;

exports[`outline icon button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-85 MuiButton-root-63 MuiButton-flat-67 sc-bdVaJa cIhZGa"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-64"
  >
    <span
      class="sc-bwzfXH czactv"
    >
      <svg
        aria-hidden="true"
        data-prefix="fas"
        data-icon="coffee"
        class="svg-inline--fa fa-coffee fa-w-20 "
        role="img"
        xmlns="http://www.w3.org/2000/svg"
        viewBox="0 0 640 512"
      >
        <path
          fill="currentColor"
          d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
        />
      </svg>
    </span>
    <span>
      default with icon
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-118"
  />
</button>
`;

exports[`outline loading button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-85 MuiButtonBase-disabled-86 MuiButton-root-63 MuiButton-flat-67 MuiButton-disabled-79 sc-bdVaJa cIhZGa"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-64"
  >
    <div
      class="MuiCircularProgress-root-95 MuiCircularProgress-colorPrimary-98 MuiCircularProgress-indeterminate-97"
      style="margin-right: 10px; color: rgb(18, 85, 102);"
      role="progressbar"
    >
      <svg
        class="MuiCircularProgress-svg-100"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle-101 MuiCircularProgress-circleIndeterminate-103"
          cx="44"
          cy="44"
          r="20.2"
          fill="none"
          stroke-width="3.6"
        />
      </svg>
    </div>
    <span>
      loading
    </span>
  </span>
</button>
`;

exports[`outline secondary button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-85 MuiButton-root-63 MuiButton-flat-67 sc-bdVaJa cmHqlQ"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-64"
  >
    <span>
      secondary
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-88"
  />
</button>
`;

exports[`outline success button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-85 MuiButtonBase-disabled-86 MuiButton-root-63 MuiButton-flat-67 MuiButton-disabled-79 sc-bdVaJa cIhZGa"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-64"
  >
    <span>
      success
    </span>
  </span>
</button>
`;

exports[`outline success color button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-85 MuiButton-root-63 MuiButton-flat-67 sc-bdVaJa kjiawb"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-64"
  >
    <span>
      success color
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-111"
  />
</button>
`;

exports[`outline warning button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-85 MuiButton-root-63 MuiButton-flat-67 sc-bdVaJa fnDcnR"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-64"
  >
    <span />
  </span>
  <span
    class="MuiTouchRipple-root-88"
  />
</button>
`;

exports[`renders add 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-195 MuiButton-root-173 MuiButton-flat-177 sc-bdVaJa eCHEZx"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-174"
  >
    <span>
      add
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-198"
  />
</button>
`;
